<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="empty_product_text">Sorry, we have no items in inventory</string>
    <string name="empty_supplier">Empty supplier</string>
    <string name="blue_velvet">Blue velvet</string>
    <string name="lost_highway">Lost Highway</string>
    <string name="twin_peaks">Twin Peaks</string>
    <string name="dune">Dune</string>
    <string name="elephant_man">The elephant man</string>
    <string name="eraserhead">Eraserhead</string>
    <string name="wild_at_hearth">Wild at hearth</string>
    <string name="fire_walk_with_me">Fire walk with me</string>
    <string name="mulholland_drive">Mulholland drive</string>
    <string name="the_straight_story">The straight story</string>
    <string name="rabbits">Rabbits</string>
    <string name="unsuccessful_saving">Saving unsuccessful</string>
    <string name="successful_saving">Saving successful</string>
    <string name="failed_update">Failed update</string>
    <string name="successful_update">Successful update</string>
    <string name="delete_item_failed">Failed delete</string>
    <string name="delete_item_successful">Successful delete</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete">Delete?</string>
    <string name="dialog_clear">Clear?</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="unsaved_changes_dialog">Changes unsaved</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="product_sold">Product sold</string>
    <string name="clear_data">Clear</string>
    <string name="insert_item">Insert item</string>
    <string name="delete_all">Delete all items</string>
    <string name="quantity_error">Quantity need to be correctly defined</string>
    <string name="save_data">Save data</string>
    <string name="sale">Sale</string>
    <string name="supplier">Supplier:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="item">Item</string>
    <string name="add_image">Add image</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Item price</string>
    <string name="choose_supplier">Choose supplier</string>
    <string name="order">Order</string>
    <string name="supplier_mail">Supplier mail</string>
    <string name="order_send">Send</string>
    <string name="browseImage">Choose image</string>
    <string name="intentType">image/*</string>
</resources>
