<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:scaleType="centerCrop"
                android:paddingTop="@dimen/image_padding_top"
                android:paddingRight="@dimen/image_padding_right"
                android:paddingLeft="@dimen/image_padding_left"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="@dimen/additional_text_size" />

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textSize="@dimen/additional_text_size" />

            <EditText
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/quantity"
                android:textSize="@dimen/additional_text_size"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/current_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="0"
                android:textSize="@dimen/additional_text_size"
                tools:ignore="HardcodedText,RtlSymmetry" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="increaseQuantity"
                android:text="+"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="decreaseQuantity"
                android:text="-"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/supplier_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_supplier"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/supplier_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <Button
            android:id="@+id/order_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order" />

        <EditText
            android:id="@+id/supplier_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_mail"
            android:visibility="invisible" />

        <Button
            android:id="@+id/order_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order_send"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
